--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     
     <title>SHCC Tourney App</title>
   </head>
-  <body>
+  <body class="container-fluid">
     <div id="root"></div>
     <!--
       This HTML file is a template.
