--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script crossorigin src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/js/materialize.min.js"></script>
     <title>SHCC Tourney App</title>
   </head>
   <body class="container-fluid">
@@ -39,8 +42,5 @@
         To create a production bundle, use `npm run build` or `yarn build`.
       -->
       
-      <!-- Compiled and minified JavaScript -->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/js/materialize.min.js"></script>
     </body>
     </html>
