Add icons for manifest; Style LoginPage

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -29,7 +29,7 @@
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/js/materialize.min.js"></script>
     <title>SHCC Tourney App</title>
   </head>
-  <body class="container-fluid">
+  <body class="container-fluid" spellcheck="false">
     <div id="root"></div>
     <!--
       This HTML file is a template.
