Work on EditEventModal and EventForm

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
-    <script crossorigin src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/js/materialize.min.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <title>SHCC Tourney App</title>
   </head>
-  <body class="container-fluid" spellcheck="false">
+  <body class="container-fluid" spellcheck="false" autocomplete="off">
     <div id="root"></div>
-    </body>
-    </html>
+  </body>
+  </html>
